fix gap in contacts fieldset

--- a/styles/blocks/form.css
+++ b/styles/blocks/form.css
@@ -46,6 +46,7 @@
 .form__label.label-contacts {
   flex-direction: column;
   align-items: flex-start;
+  gap: 8px;
 }
 
 .form__label.label-contacts .form__label-text {
@@ -88,7 +89,7 @@
 }
 
 .form__submit-button-wrapper {
-  padding: 32px 20px 40px 20px;
+  padding: 20px 20px 40px 20px;
 }
 
 .form__submit-button {
